tests/algorithms/x/C/backtracking/all_subsequences.c
// Generated by Mochi 0.10.32 on 2025-08-06 16:21 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


static long long* list_append_int_new(const long long *arr, size_t len, long long val) {
    long long *res = malloc((len + 1) * sizeof(long long));
    if (arr && len) memcpy(res, arr, len * sizeof(long long));
    res[len] = val;
    return res;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

int seq_init[3] = {1LL, 2LL, 3LL};
int *seq = seq_init;
size_t seq_len = 3;
int seq2_init[3] = {"A", "B", "C"};
int *seq2 = seq2_init;
size_t seq2_len = 3;

int create_state_space_tree(int * sequence, size_t sequence_len, int * current, size_t current_len, long long index);
int generate_all_subsequences(int * sequence, size_t sequence_len);
int main(void);

int create_state_space_tree(int * sequence, size_t sequence_len, int * current, size_t current_len, long long index) {
    if (index == sequence_len) {
        printf("%d\n", current);
        return 0;
    }
    create_state_space_tree(sequence, sequence_len, current, current_len, index + 1LL);
    int *with_elem = list_append_int_new(current, current_len, sequence[(int)(index)]);
    size_t with_elem_len = current_len + 1;
    create_state_space_tree(sequence, sequence_len, with_elem, with_elem_len, index + 1LL);
}

int generate_all_subsequences(int * sequence, size_t sequence_len) {
    create_state_space_tree(sequence, sequence_len, NULL, 0, 0LL);
}

int main(void) {
    {
        long long __start = _now();
        generate_all_subsequences(seq, seq_len);
        generate_all_subsequences(seq2, seq2_len);
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
